2010-03-16  Jb Evain  <jbevain@novell.com>

	* XElement.cs, XNodeNavigator.cs: use MOONLIGHT symbol to
	disambiguate MonoTouch and Moonlight code.

2010-03-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* XElement.cs: Added two new Load overloads for NET 4.0 and Moonlight.

2010-02-12  Miguel de Icaza  <miguel@novell.com>

	* XStreamingElement.cs: Avoid an extra indirect call, by calling
	the target methods directly.
	
	* XDocument.cs, XElement.cs, XStreamingElement.cs: Fix the
	setting of the Indent flag, since this is an enumeration, testing
	against SaveOptions.None was incorrect.  Check on the actual flag.

	* XElement.cs, XDocument.cs, XStreamingElement.cs: Add support for
	the new .NET 4.0 Save methods and the new OmitDuplicateNamespaces
	flag to SaveOptions.

	* XElement.cs, XDocument.cs, XNamespace.cs: Sprinkle
	CLSCompliantAttribute to match the compare page.

	* SaveOptions.cs: New setting for 4.0 OmitDuplicateNamespaces.

2010-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* XUtil.cs: Avoid using ToLowerInvariant since it is not 
	available in Silverlight.

2010-02-09  Chris Toshok  <toshok@ximian.com>

	* XDocument.cs: add the Load (Stream) overloads.

2010-01-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XAttribute.cs : escape whitespace chars in ToString().

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XUtil.cs : for DateTimeOffset, use XmlConvert to format string.

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XUtil.cs : format float and double values as round-trippable.

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XUtil.cs : to create an XNode from an object, do not use ToString()
	  directly. Handle TimeSpan in xsd manner.

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XUtil.cs, XElement.cs, XAttribute.cs : unlike XmlConvert, casts to
	  DateTime seem also support general conversion (parse) from strings.

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>
