@@ -536,7 +536,7 @@ namespace System.Xml.Linq
 
 			if ((options & SaveOptions.DisableFormatting) == SaveOptions.None)
 				s.Indent = true;
-#if NET_4_0
+#if NET_4_0 || MOONLIGHT
 			if ((options & SaveOptions.OmitDuplicateNamespaces) == SaveOptions.OmitDuplicateNamespaces)
 				s.NamespaceHandling |= NamespaceHandling.OmitDuplicates;
 #endif
@@ -556,7 +556,7 @@ namespace System.Xml.Linq
 			
 			if ((options & SaveOptions.DisableFormatting) == SaveOptions.None)
 				s.Indent = true;
-#if NET_4_0
+#if NET_4_0 || MOONLIGHT
 			if ((options & SaveOptions.OmitDuplicateNamespaces) == SaveOptions.OmitDuplicateNamespaces)
 				s.NamespaceHandling |= NamespaceHandling.OmitDuplicates;
 #endif
@@ -570,7 +570,7 @@ namespace System.Xml.Linq
 			WriteTo (w);
 		}
 
-#if NET_4_0
+#if NET_4_0 || MOONLIGHT
 		public void Save (Stream stream)
 		{
 			Save (stream, SaveOptions.None);
