@@ -1,3 +1,8 @@
+2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* XElement.cs:
+	* SaveOptions.cs: Add more 4.0 api to Moonlight.
+
 2010-03-16  Jb Evain  <jbevain@novell.com>
 
 	* XElement.cs, XNodeNavigator.cs: use MOONLIGHT symbol to
@@ -504,4 +509,3 @@
 	* XAttribute.cs, XIterators.cs, XName.cs, XElementSequence.cs,
 	  System.Xml.XLinq.cs :
 	  Minimum implementation to run ms XLinqIntro.
-
